--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@fullcalendar/core": "^5.4.0",
     "@fullcalendar/daygrid": "^5.4.0",
     "@fullcalendar/interaction": "^5.4.0",
@@ -14,6 +16,8 @@
     "@loadable/component": "^5.14.1",
     "@material-ui/core": "^4.12.1",
     "@material-ui/pickers": "^3.2.10",
+    "@mui/material": "^5.11.8",
+    "@mui/x-date-pickers": "^5.0.17",
     "@svg-maps/usa": "^1.1.1",
     "@svg-maps/world": "^1.0.1",
     "@sweetalert/with-react": "^0.1.1",
@@ -33,6 +37,7 @@
     "chartjs-plugin-streaming": "^1.8.0",
     "create-react-class": "^15.7.0",
     "date-fns": "^2.16.1",
+    "dayjs": "^1.11.7",
     "draft-js": "^0.11.7",
     "formik": "^2.2.6",
     "html-to-draftjs": "^1.5.0",
