--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
+    "@dnd-kit/core": "^6.0.7",
+    "@dnd-kit/sortable": "^7.0.2",
+    "@dnd-kit/utilities": "^3.2.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fullcalendar/core": "^5.4.0",
@@ -69,7 +72,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.4",
     "react-resize-detector": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.4",
     "react-rte": "^0.16.3",
     "react-scripts": "4.0.1",
     "react-select": "^3.1.1",
