--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "reselect": "^4.0.0",
     "simple-react-lightbox": "^3.5.4",
     "slick-carousel": "^1.8.1",
+    "slugify": "^1.6.5",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^10.10.4",
     "web-vitals": "^0.2.4",
