--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^36.0.1",
+    "@ckeditor/ckeditor5-react": "^5.0.6",
     "@date-io/date-fns": "^1.3.13",
     "@dnd-kit/core": "^6.0.7",
     "@dnd-kit/sortable": "^7.0.2",
@@ -64,6 +66,7 @@
     "react-draft-wysiwyg": "^1.14.5",
     "react-dropzone-uploader": "^2.11.0",
     "react-gradient-timepicker": "0.0.3",
+    "react-image-crop": "^10.0.9",
     "react-input-colorpicker": "^1.0.13",
     "react-linear-gradient-picker": "^1.1.4",
     "react-multiselect-dropdown-bootstrap": "^1.0.16",
