--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fullcalendar/timegrid": "^5.4.0",
     "@lls/react-light-calendar": "^2.2.0",
     "@loadable/component": "^5.14.1",
+    "@material-table/core": "^0.2.62",
     "@material-ui/core": "^4.12.1",
     "@material-ui/pickers": "^3.2.10",
     "@mui/material": "^5.11.8",
