--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "chartist": "^0.11.4",
     "chartist-plugin-tooltips-updated": "^0.1.3",
     "chartjs-plugin-streaming": "^1.8.0",
+    "ckeditor5-custom-build": "file:ckeditor5",
     "create-react-class": "^15.7.0",
     "date-fns": "^2.16.1",
     "dayjs": "^1.11.7",
