--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@material-table/core": "^0.2.62",
     "@material-ui/core": "^4.12.1",
     "@material-ui/pickers": "^3.2.10",
+    "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.8",
     "@mui/x-date-pickers": "^5.0.17",
     "@svg-maps/usa": "^1.1.1",
