--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-draft-wysiwyg": "^1.14.5",
     "react-dropzone-uploader": "^2.11.0",
     "react-gradient-timepicker": "0.0.3",
+    "react-hook-form": "^7.43.5",
     "react-image-crop": "^10.0.9",
     "react-input-colorpicker": "^1.0.13",
     "react-linear-gradient-picker": "^1.1.4",
