--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "slugify": "^1.6.5",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^10.10.4",
+    "uuid": "^9.0.0",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
   },
